fix: adjust min-width for mobile and spacing between pagination pages

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
   align-items: flex-start;
   justify-content: center;
   width: 100%;
-  min-width: 37.5rem;
+  min-width: 37.1rem;
   height: 16rem;             
   color: var(--footer-text-color);
   background-color: var(--footer-bg);
