--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  min-width: 37.5rem;
+  min-width: 37.1rem;       /* 갤럭시 S20+ 브라우저 사이즈가 374 x 699 */
   z-index: 1000;
   border-bottom: 0.1rem solid var(--nav-divider-color);
   background-color: var(--background-color);
